# hydrotrends

./: .gitignore  README.md  pyproject.toml
hydrotrends/: __init__.py  analysis.py  workflow.py  workflows.py
hydrotrends/aggregation/: polygon_aggregation.py
hydrotrends/analysis/: aggregation.py  trends.py
hydrotrends/calendar/: constants.py
hydrotrends/climatology/: seasons.py
hydrotrends/conversions/: __init__.py
hydrotrends/extreme_climate_indices/: precipitation.py  temperature.py
hydrotrends/io/: excel.py  grib.py  load.py
hydrotrends/plots/: plots.py
hydrotrends/summaries/: rank_regions.py
hydrotrends/transforms/: units.py
hydrotrends/workflows/: workflows.py
