[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrotrends"
version = "0.1.0"
description = "Python tools for hydroclimatic trend analysis, spatial aggregation, and climate indices."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "xarray",
    "matplotlib",
    "xagg",
    "pymannkendall",
    "openpyxl",
    "cfgrib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hydrotrends*"]